@@ -1,1 +1,11 @@
 # resume-builder
+
+## To clone and run this project:
+1. Run the command git@github.com:HamzaHamdan/resume-builder.git
+2. Open the project in eclipse
+3. Right click the project
+4. Run As > Run Configurations
+5. Go to arguments tab and add the below line to VM arguments: --module-path="path\to\javafx\sdk\11.0.2\lib" --add-modules=javafx.controls,javafx.fxml
+6. Add JavaFX user library if it does not exist
+7. Run the project
+8. Enjoy!
